# AstralEngine

./: .gitignore  .gitmodules  CHANGES.md  CMakeLists.txt  DUMP.txt  LICENSE  NOTES.txt  README.md  Tupfile.lua  \  cleanup.cmake
.github/workflows/: build.yml
Veneer/: EnumData.lua
docs/Components/: index.md
docs/Globals/: GetService.md
docs/Globals/AstralEngine/: System.md  index.md
docs/Services/: Entity.md  TagService.md
docs/Types/: Entity.md  index.md
editor_test/: config.lua  launch.lua
editor_test/Early/: Stellar_Log.lua  init.lua
engine/: ALLKEYS.lua  CompGlobals.lua  GAME2.lua  GAMEDUMMY.lua  LBMFTEST.lbmf  LOVRBridge.aspr  LuaNim.nim  PBR.md  PluginHandler.lua  ResizeRepair.lua  coreconf.lua  g.lua  main.lua  pre.lua  splash.aspr
engine/Compile/: Code.lua  Lexer.lua  NOJIT.lua  init.lua
engine/Compile/Metatags/: Define.lua  Execute.lua  Flags.lua  Ifdef.lua  Macro.lua  Pragma.lua
engine/CompileNEW/: Lexer.lua  init.lua
engine/Engine/: PluginManager.lua  init.aspr  init.lua
engine/Engine/AssetManager/: init.lua
engine/Engine/Graphics/: DeviceQuery.lua  Tilemap.lua  init.lua
engine/Engine/LOVRBridge/: Keys.lua  init.lua
engine/Engine/Physics/: Data.lua  Params.lua  Shapes.lua  init.aspr
engine/Engine/Render/: init.aspr
engine/Engine/Render/RenderCalls/: Mirror.lua  Scene.lua  ToPass.lua
engine/Engine/Render/ShaderService/: Mangler.aspr  Pragmas.aspr  init.aspr
engine/Engine/Render/Shaders/: Root.glsl
engine/Engine/SERVICES/: ServiceShared.aspr
engine/Engine/SERVICES/ContextActionService/: CASNATIVE.c  init.aspr
engine/Engine/SERVICES/InputService/: init.aspr  keyboard.aspr  mouse.aspr
engine/Engine/SERVICES/RunService/: RunServiceNative.c  init.aspr
engine/Engine/Scheduler/: NativeSched.c  NativeSched.nim  init.aspr
engine/Engine/ScriptSystem/: AssetMap.lua  Context.lua  LoadAssets.lua  Scene.lua  Scripts.lua  init.aspr
engine/Engine/Services/AssetManager/: init.lua
engine/Engine/Services/ContextActionService/: init.aspr  init.lua
engine/Engine/Services/InputService/: Controller.lua  init.aspr  init.lua
engine/Engine/Services/Physics/: Data.lua  Params.lua  PhysAPI.lua  PhysNative.c  PhysNative.mod.c  Shapes.lua  init.aspr  init.lua
engine/Engine/World/: Instance.aspr  TagService.lua  init.aspr
engine/Global/: Color.lua  LuaArchiveFileReader.lua  Math.lua  Pairs.lua  StrictType.lua  String.lua  Switch.lua  Table.lua  TableAlloc.c  Type.lua  Typeof.lua  WrapSelf.lua  init.lua  readme.md
engine/Global/LBMF/: init.lua
engine/Global/Math/: bit.nojit.c  init.lua
engine/Global/Table/: TableAlloc.mod.c  init.lua
engine/Lib/: ANSIText.lua  Enum.lua  Extractor.lua  Log.lua  Mount.lua  Require.lua  Serialize.lua  Signal.lua  TextInput.lua  readme.md
etc/: AndroidManifest.xml  Info.plist  VarelaRound.ttf.h  astral_api.h  astralc.bat  boot.lua  boot.lua.h  filesystem.lua  ic_launcher.xml  logo.frag  lovr.html  monkeycrush.lua.h  shaders.h  webxr.js
etc/nogame/: arg.lua  conf.lua  errhand.lua  logo.spv  main.lua
etc/shaders/: animator.comp  animator.comp.h  blender.comp  blender.comp.h  cubemap.frag  cubemap.frag.h  cubemap.vert  cubemap.vert.h  equirect.frag  equirect.frag.h  fill.vert  fill.vert.h  fill_array.frag  fill_array.frag.h  font.frag  font.frag.h  lovr.glsl  lovr.glsl.h  mask.vert  mask.vert.h  normal.frag  normal.frag.h  tallymerge.comp.h  unlit.frag  unlit.frag.h  unlit.vert  unlit.vert.h
loosefiles/: luatest.lua
src/: main.c  util.c  util.def  util.h
src/api/: api.c  api.def  api.h  l_audio.c  l_audio_audioMesh.c  l_audio_source.c  l_data.c  l_data_animation.c  l_data_audioStream.c  l_data_blob.c  l_data_cstruct.c  l_data_modelData.c  l_data_rasterizer.c  l_data_sound.c  l_event.c  l_filesystem.c  l_graphics.c  l_graphics_buffer.c  l_graphics_font.c  l_graphics_mesh.c  l_graphics_model.c  l_graphics_pass.c  l_graphics_raytracer.c  l_graphics_readback.c  l_graphics_shader.c  l_graphics_texture.c  l_headset.c  l_headset_layer.c  l_math.c  l_math.lua  l_math_curve.c  l_math_mat4.c  l_math_vectors.c  l_physics.c  l_physics.def  l_physics_collider.c  l_physics_joints.c  l_physics_shapes.c  l_physics_world.c  l_system.c  (+5 more)
src/core/: fs.c  fs.h  gpu.h  gpu_vk.c  gpu_web.c  job.c  job.h  maf.h  os.h  os_android.c  os_glfw.h  os_linux.c  os_macos.c  os_wasm.c  os_win32.c  spv.c  spv.h
src/lib/dmon/: dmon.h
src/lib/rapidhash/: rapidhash.h
src/lib/std/: threads.h
src/lib/webgpu/: webgpu.h  webgpu.js
src/modules/audio/: audio.c  audio.h
src/modules/data/: blob.c  blob.h  cstruct.c  cstruct.h  image.c  modelData.c  modelData.h  modelData_gltf.c  modelData_obj.c  modelData_stl.c  rasterizer.c  rasterizer.h  sound.c  sound.h
src/modules/event/: event.c  event.h
src/modules/filesystem/: filesystem.c
src/modules/graphics/: graphics.c  graphics.h
src/modules/headset/: actions.h  headset.c  headset.h  headset.js  headset_openxr.c  headset_simulator.c  headset_webxr.c
src/modules/math/: math.c  math.h
src/modules/physics/: physics.c  physics.def  physics.h
src/modules/system/: system.c  system.h
src/modules/task/: task.c  task.h
src/modules/thread/: thread.c  thread.h
src/modules/timer/: timer.c  timer.h
test/: conf.lua  main.lua
test/lovr/: data.lua  filesystem.lua  graphics.lua  init.lua  math.lua  physics.lua  thread.lua
testgame/: config.lua  launch.lua  meta.lua
testgame/Assets/AssetMaps/: CoreMap.lua  Folder.lua  Objects.lua  PhysWorld.lua
testgame/Assets/Components/: COMPONENTTEST.lua
testgame/Assets/Scenes/: entry.scene.lua
testgame/Assets/Scripts/: CoolScript.lua  TilemapTest.lua  UITest.lua
testgame/DbgTest/: config.lua  launch.lua  lust.lua
testgame/Game/RootScene/: AssetMap.lua
testgame/Plugins/Veneer/: ComponentShared.lua  UIDrawable.lua  UITransform.lua  config.lua  meta.lua
testgame/RandomTesting/: config.lua  launch.lua
testgame/UITesting/: Assetmap.lua  BaseIntro.laf  Intro.lua  LuaTest.laf  TESTFILE_ZIP_2.lua  config.lua  launch.lua  main.lua  test2.lua
testgame/UITesting/Plugins/: VeneerUILaf.laf
(+167 files in other folders)
